# EternalJK

./: .gitignore  CMakeLists.txt  CreateVisualStudioProject.bat  Extended Data.txt  LuaCommands.txt  README.md
.github/workflows/: build.yml  workflow.yml
JKGServer/: server.cfg
JKGServer/server/: ranks.json
JKGalaxies/: JKG_Defaults.cfg
JKGalaxies/glua/: cinbuilder.lua  dice.lua  emotes.lua  init.lua  misc.lua
codemp/: CMakeLists.txt
codemp/GLua/: glua_entity.cpp  glua_npc.cpp  glua_player.cpp  glua_sys.cpp
codemp/cgame/: CMakeLists.txt  cg_consolecmds.c  cg_draw.cpp  cg_ents.c  cg_event.cpp  cg_imgui.c  cg_local.h  cg_main.c  cg_main.cpp  cg_players.c  cg_players.cpp  cg_public.h  cg_servercmds.cpp  cg_syscalls.c  cg_view.c  cg_weapons.cpp  cg_weapons.h  cg_xcvar.h
codemp/client/: FxUtil.cpp  cl_cgameapi.cpp  cl_cgameapi.h  cl_cin.cpp  cl_console.cpp  cl_imgui.cpp  cl_input.cpp  cl_keys.cpp  cl_main.cpp  cl_scrn.cpp  cl_uiapi.cpp  cl_uiapi.h  client.h  snd_dma.cpp
codemp/game/: NPC.cpp  NPC_stats.cpp  bg_ammo.cpp  bg_ammo.h  bg_buffs.cpp  bg_buffs.h  bg_constants.cpp  bg_items.cpp  bg_items.h  bg_pmove.cpp  bg_public.h  bg_saber.cpp  bg_saberLoad.cpp  bg_shields.cpp  bg_weapons.h  bg_weapons_load.cpp  g_active.cpp  g_client.cpp  g_cmds.cpp  g_combat.cpp  g_local.h  g_log.cpp  g_main.cpp  g_utils.cpp  g_weapon.cpp  g_xcvar.h  jkg_damageareas.cpp  jkg_equip.cpp  jkg_trade.cpp  w_saber.cpp
codemp/ghoul2/: G2_gore.cpp  ghoul2_shared.h
codemp/qcommon/: cm_load.cpp  common.cpp  cvar.cpp  files.cpp  game_version.h  q_shared.c  q_shared.h  qcommon.h  qfiles.h
codemp/rd-common/: mdx_format.h  tr_font.cpp  tr_image_jpg.cpp  tr_types.h  (+3 more)
codemp/rd-vulkan/: CMakeLists.txt  G2_API.cpp  G2_gore_r2.cpp  G2_gore_r2.h  G2_misc.cpp  tr_WorldEffects.cpp  tr_backend.cpp  tr_bsp.cpp  tr_cmds.cpp  tr_curve.cpp  tr_ghoul2.cpp  tr_image.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_marks.cpp  tr_mesh.cpp  tr_model.cpp  tr_quicksprite.cpp  tr_scene.cpp  tr_shade.cpp  tr_shade_calc.cpp  tr_shader.cpp  tr_shadows.cpp  tr_sky.cpp  tr_surface.cpp  tr_world.cpp  vk_attachments.cpp  vk_bindless.cpp  vk_bloom.cpp  vk_buffer.cpp  vk_cmd.cpp  vk_cubemap.cpp  vk_debug.cpp  vk_dynamic_glow.cpp  vk_flares.cpp  vk_frame.cpp  vk_image.cpp  vk_image_process.cpp  (+15 more)
codemp/rd-vulkan/imgui/: imconfig.h
codemp/rd-vulkan/imgui/backends/: imgui_impl_sdl.cpp  imgui_impl_vulkan.cpp
codemp/rd-vulkan/inspector/: vk_imgui.cpp  vk_imgui.h  vk_imgui_context.cpp  vk_imgui_cubemaps.cpp  vk_imgui_entity.cpp  vk_imgui_flares.cpp  vk_imgui_globals.cpp  vk_imgui_profiler.cpp  vk_imgui_rtx.cpp  vk_imgui_shader.cpp  vk_imgui_shader.h  vk_imgui_shader_nodes.cpp  vk_imgui_shader_nodes.h  vk_imgui_shader_nodes_general.h  vk_imgui_shader_nodes_parse.cpp  vk_imgui_shader_nodes_stage.h  vk_imgui_shader_text.cpp  vk_imgui_world_nodes.cpp
codemp/rd-vulkan/rtx/: vk_rtx.cpp  vk_rtx.h  vk_rtx_accel.cpp  vk_rtx_as.cpp  vk_rtx_asvgf.cpp  vk_rtx_asvgf.h  vk_rtx_bsp.cpp  vk_rtx_buffer.cpp  vk_rtx_cmd.cpp  vk_rtx_descriptor.cpp  vk_rtx_god_rays.cpp  vk_rtx_image.cpp  vk_rtx_material.cpp  vk_rtx_matrix.cpp  vk_rtx_model.cpp  vk_rtx_physical_sky.cpp  vk_rtx_physical_sky.h  vk_rtx_pipelines.cpp  vk_rtx_precomputed_sky.cpp  vk_rtx_precomputed_sky.h  vk_rtx_shade.cpp  vk_rtx_shader.cpp  vk_rtx_shadow_map.cpp  vk_rtx_tonemap.cpp  vk_rtx_tonemap.h  vk_rtx_transparency.cpp  vk_rtx_uniform.cpp
codemp/rd-vulkan/shaders/: compile.bat  compile_pixel.bat  compile_rtx.bat
codemp/rd-vulkan/shaders/glsl/: brdflut.frag  color.frag  color.vert  color_ghoul2.vert  composition.frag  composition.vert  dot.vert  filtercube.geom  filtercube.vert  fog.frag  fog.vert  fog_frag.tmpl  fog_ghoul2.vert  fog_vert.tmpl  gen_frag.tmpl  gen_vert.tmpl  global.h  irradiancecube.frag  light_frag.tmpl  light_vert.tmpl  normalmap.comp  offscreen.vert  prefilterenvmap.frag  refraction.tmpl  refraction_frag.tmpl  refraction_vert.tmpl  surface_sprite_frag.tmpl  surface_sprite_vert.tmpl  texture.h
codemp/rd-vulkan/shaders/glsl/rtx/: checkerboard.glsl  constants.h  global_textures.h  global_ubo.h  inspector.h  light_lists.h  path_tracer.h  path_tracer_rgen.h  precomputed_sky_params.h  projection.glsl  read_visbuf.glsl  restir.h  shader_structs.h  sky.h  utils.glsl  vertex_buffer.h  water.glsl
codemp/rd-vulkan/shaders/glsl/rtx/compute/: asvgf.glsl  asvgf_atrous.comp  asvgf_gradient_atrous.comp  asvgf_gradient_img.comp  asvgf_gradient_reproject.comp  asvgf_lf.comp  asvgf_taau.comp  asvgf_temporal.comp  bloom_blur.comp  bloom_composite.comp  checkerboard_interleave.comp  compositing.comp  god_rays.comp  god_rays_filter.comp  instance_geometry.comp  physical_sky.comp  precomputed_sky.glsl  sky_buffer_resolve.comp  tone_mapping_apply.comp  tone_mapping_curve.comp  tone_mapping_histogram.comp
codemp/rd-vulkan/shaders/glsl/rtx/raytracer/: direct_lighting.rgen  indirect_lighting.rgen  path_tracer.rchit  path_tracer.rmiss  path_tracer_beam.rahit  path_tracer_beam.rint  path_tracer_explosion.rahit  path_tracer_hit_shaders.h  path_tracer_masked.rahit  path_tracer_particle.rahit  path_tracer_shadow.rmiss  path_tracer_sprite.rahit  path_tracer_transparency.glsl  primary_rays.rgen  reflect_refract.rgen
codemp/rd-vulkan/shaders/glsl/rtx/vert/: final_blit_lanczos.frag
codemp/rd-vulkan/shaders/spirv/: data.spv  shader_binding.c  shader_binding_pixel.c  shader_data.c
codemp/rd-vulkan/shaders/tools/: compile_threaded.cpp
codemp/rd-vulkan/utils/ImGuiColorTextEdit/: TextEditor.cpp  TextEditor.h
codemp/rd-vulkan/utils/ImNodeFlow/: CMakeLists.txt
codemp/rd-vulkan/utils/ImNodeFlow/include/: ImNodeFlow.h
codemp/rd-vulkan/utils/ImNodeFlow/src/: ImNodeFlow.cpp  ImNodeFlow.inl  context_wrapper.h
codemp/rd-vulkan/utils/legit-profiler/: imgui_legit_profiler.h
codemp/rd-vulkan/vulkan/: vulkan_core.h
lib/imgui/: CMakeLists.txt
lib/imgui/include/: cimgui.cpp  cimgui.h  imconfig.h  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp
lib/imgui/include/backends/: imgui_impl_vulkan.cpp
lib/imgui/include/icons/FontAwesome5/: IconsFontAwesome5.h  fa5solid900.cpp
(+253 files in other folders)
